chore: add tags to help search

--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
   },
   "peerDependencies": {
     "pg": "*"
-  }
+  },
+  "keywords": [
+    "postgres",
+    "pg",
+    "tagged template strings",
+    "typescript"
+  ]
 }
