--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "outDir": "lib",
     "strict": true,
     "esModuleInterop": true,
+    "downlevelIteration": true
   },
   "exclude": [
     "node_modules",
